# stunts2005

stunts/: .cvsignore  AUTHORS  Doxyfile  Makefile.am  Makefile.cvs  README  README.cvs  README.external  acinclude.m4  configure.in  mkinstalldirs
stunts/config/: resources.cfg  sound.cfg  terrain.cfg
stunts/doc/: timeline.htm
stunts/doc/presentations/: Game Development Seminar - code conventions.ppt
stunts/doc/uml/: Stunts2005.dia
stunts/media/cars/: jeep.xml  jeep_ode.xml  solar.xml  solar_ode.xml  subaru.xml  subaru_ode.xml
stunts/media/graphics/arrow/: arrow.mesh.xml
stunts/media/graphics/blue_car_z350/: audo.3DS  car.mesh.xml  car_simple.mesh.xml  wheel.mesh.xml  wheel_simple.mesh.xml
stunts/media/graphics/cactus/: cactus.mesh.xml
stunts/media/graphics/corner/: corner.3DS
stunts/media/graphics/corner_big/: corner_big.3DS  corner_big.mesh.xml
stunts/media/graphics/corner_big_sand/: corner_big_sand.mesh.xml
stunts/media/graphics/corner_bridge/: corner_bridge.3DS
stunts/media/graphics/corner_bridge_small/: corner_bridge_small.3DS  corner_bridge_small.mesh.xml
stunts/media/graphics/corner_brigde_big/: corner_bridge_big.3DS  corner_bridge_big.mesh.xml  corner_bridge_big_simple.mesh.xml
stunts/media/graphics/corner_small/: corner_small.3DS  corner_small.mesh.xml  corner_small_sand.mesh.xml
stunts/media/graphics/corner_small_sand/: corner_small_sand.mesh.xml
stunts/media/graphics/crossover/: crossover.3DS  crossover.mesh.xml  crossover_simple.mesh.xml
stunts/media/graphics/drive-down_bridge/: drive-down_bridge.3DS  drive-down_bridge.mesh.xml  drive-down_bridge_simple.mesh.xml
stunts/media/graphics/drive-up_bridge/: Thumbs.db  drive-up_bridge.3DS  drive-up_bridge.mesh.xml
stunts/media/graphics/half-timbered_house/: house.3DS  house.mesh.xml  house_simple.mesh.xml
stunts/media/graphics/jump/: jump.3DS  jump.mesh.xml  jump_simple.mesh.xml
stunts/media/graphics/lamp/: streetlight.mesh.xml
stunts/media/graphics/loop/: loop.3DS  loop.mesh.xml  loop_simple.mesh.xml
stunts/media/graphics/palm/: palm.mesh.xml  palm_simple.mesh.xml
stunts/media/graphics/screw/: screw.3DS  screw.mesh.xml
stunts/media/graphics/skyscraper/: skyscraper.3DS  skyscraper.mesh.xml  skyscraper_simple.mesh.xml
stunts/media/graphics/snake/: snake.3DS  snake.mesh.xml  snake_simple.mesh.xml
stunts/media/graphics/solar/: solar ohne textur.max  solar_car.mesh.xml  solarcar_with_textures.3DS  solardeckel.material  solardeckel.mesh.xml  solarunten.material  solarunten.mesh.xml  voituresolaire34.max  wheel_solar.mesh.xml
stunts/media/graphics/start_goal/: start_goal.mesh.xml
stunts/media/graphics/tennis/: tennis.mesh.xml
stunts/media/gui/: Gui.overlay  HUD.material  HUD.overlay  InGame.layout  InGameLevel.layout  InGameOption.layout  Main.layout  Main.overlay  MainLevel.layout  MainOption.layout  TaharezLook.tga  kmh.tga  menu.material  nrengine_intro.material  nrengine_intro.overlay  ogre_intro.material  ogre_intro.overlay  rpm.tga  stunts_intro.material  stunts_intro.overlay  tachonadel.material  tachonadel.mesh.xml  tahoma-12.font
stunts/media/level/: Atmosphere1.xml  CarBMW.xml  Level.xml  Terrain1.xml  Terrain2.xml  Terrain3.xml  Terrain4.xml  Terrain5.xml  Track1.xml  content.xml  corner_big_waypoints.xml  crossover_waypoints.xml  drive_down_up_waypoints.xml  drive_up_bridge_waypoints.xml  jeep.xml  jeep_ode.xml  jump_waypoints.xml  snake_waypoints.xml  straight_line_bridge_waypoints.xml  straight_line_waypoints.xml  subaru_ode.xml  terrain3.cfg  terrain4.cfg  terrain5.cfg  total_track_objects.xml  tube_with_wall_waypoints.xml
stunts/media/materials/: car.material  environment.material  houses.material  jeep_body.material  jeep_wheell.material  simple.material  solar_car.material  street.material  tennis.material  tree.material  vehicles.material  water.material  wheel.material  windmill.material
stunts/media/meshes/: Bruecke.mesh  arrow.mesh  cactus.mesh  car.mesh  car_simple.mesh  corner_big.mesh  corner_bridge_big.mesh  corner_bridge_big_simple.mesh  corner_bridge_small.mesh  corner_small.mesh  corner_small_sand.mesh  crossover.mesh  crossover_simple.mesh  drive-down_bridge.mesh  drive-down_bridge_simple.mesh  drive-up_bridge.mesh  house.mesh  house_simple.mesh  jump.mesh  jump_simple.mesh  loop.mesh  loop_simple.mesh  mill.mesh  palm.mesh  palm_simple.mesh  sail.mesh  screw.mesh  skyscraper.mesh  skyscraper_simple.mesh  snake.mesh  snake_simple.mesh  solar_car.mesh  solardeckel.mesh  solarunten.mesh  start_goal.mesh  straight_line.mesh  straight_line_bridge.mesh  straight_line_sand.mesh  streetlight.mesh  tennis.mesh  (+17 more)
stunts/media/terrain/: terrain.psd
stunts/media/waypoints/: corner_big_bridge_waypoints.xml  corner_big_waypoints.xml  corner_small_bridge_waypoints.xml  corner_small_waypoints.xml  crossover_waypoints.xml  drive-up_bridge_waypoints.xml  drive_down_bridge_waypoints.xml  jump_waypoints.xml  loop_waypoints.xml  straight_line_bridge_waypoints.xml  tunnel_waypoints.xml  y_waypoints.xml
stunts/src/: .cvsignore  AICarControl.cpp  AICarControl.hpp  Atmosphere.cpp  Atmosphere.hpp  BaseControl.cpp  BaseControl.hpp  BaseObject.cpp  BaseObject.hpp  CFunction.cpp  CFunction.h  CGuiAction.h  CGuiAddInt.cpp  CGuiAddInt.h  CGuiButton.cpp  CGuiButton.h  CGuiDummy.h  CGuiExitGui.cpp  CGuiExitGui.h  CGuiGfx.h  CGuiMulti.cpp  CGuiMulti.h  CGuiObject.h  CGuiPage.cpp  CGuiPage.h  CGuiParser.cpp  CGuiParser.h  CGuiStartGame.cpp  CGuiStartGame.h  CGuiTask.cpp  CGuiTask.h  CGuiTex.cpp  CGuiTex.h  CKI.cpp  CKI.h  CNeuralNetwork.cpp  CNeuralNetwork.h  CNeurode.cpp  CNeurode.h  CSound.cpp  (+71 more)
stunts/tech_demos/: GuiTest.cpp  YET ANOTHER TEST PROGRAM (SERIALIZATION).txt
stunts/templates/: Makefile.am  MyClass.cpp  MyClass.hpp
stunts/utilities/: CEGUIRenderer-cegui_mk2.tar.bz2  INSTALL  OgreOdeVehicle.cpp  OgreOdeVehicle.h  cegui_mk2_stunts_release.tar.bz2
stunts/utilities/TrackEd/: Images.cpp  Images.h  Terrain.cpp  Terrain.h  TrackData.cpp  TrackData.h  TrackEd.cpp  TrackEd.dev  TrackEdUI.cxx  TrackEdUI.fld  TrackEdUI.h  Translate.cpp  Translate.h  round.ted
(+76 files in other folders)
