# This project is not a GNU project
AUTOMAKE_OPTIONS = foreign 1.4

# Add all sub directories here in the order in which they are compiled.
# You may also add . if you want the current directory to be compiled in a
# specific order.
SUBDIRS = src

# Add here all files that should go into the distribution in addition
# to the standard files.
EXTRA_DIST = README.external