# Process this file with autoconf to produce configure

#
# Initialization
#

# Initialize automake
AC_INIT(configure.in)

# Create a config header
AM_CONFIG_HEADER(config.h)

# Initialize automake
AM_INIT_AUTOMAKE(stunts, 0.1)


#
# Checks for Programs
#

# Set language to C++
AC_LANG_CPLUSPLUS

# Check for C++ compiler
AC_PROG_CXX

# Check for libtool
AM_PROG_LIBTOOL


#
# Checks for Libraries
#

# Check for OpenGL
AX_CHECK_GL
AX_CHECK_GLU

# Check for nrEngine
AX_CHECK_NRENGINE

# Check for ODE
AX_CHECK_ODE

# Check for BOOST and its components
RS_BOOST([1.32.0],[],[AC_MSG_ERROR([Package requires the Boost C++ 
                        libraries!])]) 
RS_BOOST_SERIALIZATION

# Check for OGRE
AX_CHECK_OGRE

#
# Output
#

# Add all Makefiles here
AC_OUTPUT([
Makefile
src/Makefile
])
