# Process this file with automake to produce Makefile.in

# Add here all programs that should be built and installed in $PREFIX/bin
bin_PROGRAMS = myapp

# Add here all .cpp source files that are needed to build myapp
myapp_SOURCES = \
	MyClass.cpp \
	main.cpp

# Add here all headers that are needed to build myapp
# These headers will not be installed, but included in the dist
noinst_HEADERS = \
	MyClass.hpp

# Add here all files that should go into the distribution in addition to the
# default files.
EXTRA_DIST = \
	README
